--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
                                     <img src="assets/images/gfonts.png" alt="GFonts">
                                     <div class="d-flex align-items-center justify-content-between">
                                         <div class="infos">
-                                            <h4>Blog</h4>
-                                            <h1>GFonts</h1>
+                                            <h4>intellectual property (IP)</h4>
+                                            <h1>Patents</h1>
                                         </div>
     
                                         <a href="blog.html" class="about-btn">
