--- a/SixSigma.html
+++ b/SixSigma.html
@@ -89,10 +89,10 @@
                                 <li>
                                     <p>SKILLS GAINED</p>
                                     <h4>DMAIC Framework</h4>
-                                    <h4>Statistical analysis</h4>
+                                    <h4>Statistical Analysis</h4>
                                     <h4>Risk Mitigation</h4>
                                     <h4>Performance Metrics</h4>
-                                    <h4>Problem-solving</h4>
+                                    <h4>Problem-Solving</h4>
                                 </li>
                             </ul>
                         </div>
