--- a/machinelearning.html
+++ b/machinelearning.html
@@ -57,7 +57,7 @@
         <section class="breadcrumb-area">
             <div class="container">
                 <div class="breadcrumb-content" data-aos="fade-up">
-                    <h1 class="section-heading" style="text-align: center;"><img src="assets/images/star-2.png" alt="Star"> ML SPECIALIZATION <img src="assets/images/star-2.png" alt="Star"></h1>
+                    <h1 class="section-heading" style="text-align: center;"><img src="assets/images/star-2.png" alt="Star"> MACHINE LEARNING SPECIALIZATION <img src="assets/images/star-2.png" alt="Star"></h1>
                 </div>
             </div>
         </section>
